<?xml version="1.0" encoding="utf-8"?>
<ScrollView>
    <android.support.v7.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <android.support.v7.widget.AppCompatEditText
                android:minWidth="240dp"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/pet_name"
                android:inputType="textCapSentences|textNoSuggestions"
                android:hint="@string/name"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <android.support.v7.widget.AppCompatEditText
                android:minWidth="240dp"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:id="@+id/pet_birthday"
                android:inputType="date"
                android:focusable="false"
                android:longClickable="false"
                android:hint="@string/date_of_birthday"
                hintAnimationEnabled="true"
                />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:padding="4dp"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            android:text="@string/species"
        />
        <android.support.v7.widget.AppCompatSpinner
            android:minWidth="240dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/pet_species"
            android:drawSelectorOnTop="true"
            android:entries="@array/species"
            />
        <android.support.v7.widget.LinearLayoutCompat
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:padding="4dp"
            >
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:id="@+id/pet_form_delete"
                android:text="@string/delete"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
            />
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:id="@+id/pet_form_cancel"
                android:text="@android:string/cancel"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                />
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:id="@+id/pet_form_ok"
                android:text="@android:string/ok"
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>

